Replace --illegal-access=permit with --add-opens
The former was removed from Java 17